--- a/public/assets/scss/elements/_service.scss
+++ b/public/assets/scss/elements/_service.scss
@@ -58,18 +58,9 @@
         @extend %transition;
         @extend %posrelative;
         z-index: 2;
+        width:100%;
         border-radius: 10px;
-        @media #{$laptop-device} {
-            padding: 30px 28px;
-        }
-        @media #{$md-layout} {
-            padding: 30px 25px;
-        }
-        @media #{$sm-layout} {
-            padding: 30px 14px;
-        }
         @media #{$large-mobile} {
-            padding: 30px 18px;
             margin-top: 30px;
         }
 
